name:                issy
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base
    , containers
    , process
    , hanoi
    , finite
    , tsl

  exposed-modules:
      Compiler
    , Issy
 
  other-modules:
      Compiler.Base
    , Compiler.Checker
    , Compiler.Lexer
    , Compiler.Parser
    , Compiler.Writer
    , Issy.Base.Locations
    , Issy.Base.Objectives
    , Issy.Base.SymbolicState
    , Issy.Base.Variables
    , Issy.Config
    , Issy.Extractors.MuCLP
    , Issy.Extractors.TSLT
    , Issy.Logic.FOL 
    , Issy.Logic.RPLTL
    , Issy.Logic.SMT
    , Issy.Logic.Temporal
    , Issy.Logic.TSLMT
    , Issy.Monitor
    , Issy.Monitor.CHC
    , Issy.Monitor.Fixpoints
    , Issy.Monitor.Formula
    , Issy.Monitor.Monitor
    , Issy.Monitor.Postprocess
    , Issy.Monitor.Propagation
    , Issy.Monitor.Rules
    , Issy.Monitor.State
    , Issy.Monitor.Successors
    , Issy.Parsers.IssyFormat
    , Issy.Parsers.RPG
    , Issy.Parsers.SExpression
    , Issy.Parsers.SMTLib
    , Issy.Parsers.SMTLibLexer
    , Issy.Parsers.TSLMT
    , Issy.Printers.IssyFormat
    , Issy.Printers.RPG
    , Issy.Printers.SymbolicGame
    , Issy.Printers.SMTLib
    , Issy.Products.RPGMonitor
    , Issy.Products.SGMonitor
    , Issy.Products.SymbolicGames
    , Issy.RPG
    , Issy.Solver.Acceleration
    , Issy.Solver.Acceleration.Heuristics
    , Issy.Solver.Acceleration.LemmaFinding
    , Issy.Solver.Acceleration.LoopScenario
    , Issy.Solver.Acceleration.MDAcceleration
    , Issy.Solver.Acceleration.UFLAcceleration
    , Issy.Solver.Attractor
    , Issy.Solver.ControlFlowGraph
    , Issy.Solver.GameInterface
    , Issy.Solver.ObjectiveSolver
    , Issy.Specification
    , Issy.SymbolicArena
    , Issy.Translation
    , Issy.Translation.DOA
    , Issy.Translation.LTL2DOA
    , Issy.Translation.RPLTL2SG
    , Issy.Translation.TSL2RPG
    , Issy.Utils.Extra
    , Issy.Utils.Logging
    , Issy.Utils.OpenList
  
  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010

executable issy-solve

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
    Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/solve
    src/tools/common

  default-language:
    Haskell2010

executable issy-print

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
    Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/print
    src/tools/common

  default-language:
    Haskell2010

executable issy-to-game

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
    Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/togame
    src/tools/common

  default-language:
    Haskell2010

executable rpgsolve

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
    Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/rpgsolve
    src/tools/common

  default-language:
    Haskell2010

executable rpgencode

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
      Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/rpgencode
    src/tools/common

  default-language:
    Haskell2010

executable rpgprint

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , issy

  other-modules:
    Common

  hs-source-dirs:
    src/tools/rpgprint
    src/tools/common

  default-language:
    Haskell2010

executable tslmt2rpg

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
    Common

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/tsl2rpg
    src/tools/common

  default-language:
    Haskell2010


executable issy-compiler

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/tools/compiler

  default-language:
    Haskell2010
