name:                issy
version:             1.0.0.0
license:             PublicDomain
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-x-partial
    -Werror
    -Wwarn=unused-imports
    -Wwarn=unused-matches
    -Wwarn=unused-top-binds
    -Wwarn=unused-local-binds
    -Wwarn=unused-pattern-binds
    -Wwarn=type-defaults
    -fno-ignore-asserts
    -static
-----optl-static

  build-depends:
      base
    , containers
    , process
    , hanoi
    , tsl-parser

  exposed-modules:
      Issy

  other-modules:
      Issy.Compiler
    , Issy.Compiler.Base
    , Issy.Compiler.Checker
    , Issy.Compiler.Lexer
    , Issy.Compiler.Parser
    , Issy.Compiler.Writer
    , Issy.Config
    , Issy.Encoders.FullMuCLP
    , Issy.Encoders.LTLMT
    , Issy.Encoders.Sweap
    , Issy.Encoders.ToFixpoints
    , Issy.Encoders.ToFormula
    , Issy.Encoders.TSLT
    , Issy.Games.Locations
    , Issy.Games.Objectives
    , Issy.Games.ReactiveProgramArena
    , Issy.Games.SymbolicArena
    , Issy.Games.SymbolicState
    , Issy.Games.Variables
    , Issy.Logic.CHC
    , Issy.Logic.FOL 
    , Issy.Logic.Interval
    , Issy.Logic.Polyhedra 
    , Issy.Logic.Propositional
    , Issy.Logic.Reasoning
    , Issy.Logic.RPLTL
    , Issy.Logic.SMT
    , Issy.Logic.Temporal
    , Issy.Logic.TSLMT
    , Issy.Monitor
    , Issy.Monitor.Fixpoints
    , Issy.Monitor.Formula
    , Issy.Monitor.Monitor
    , Issy.Monitor.Postprocess
    , Issy.Monitor.Propagation
    , Issy.Monitor.Rules
    , Issy.Monitor.State
    , Issy.Monitor.Successors
    , Issy.Parsers.LLIssyFormat
    , Issy.Parsers.RPG
    , Issy.Parsers.SExpression
    , Issy.Parsers.SMTLib
    , Issy.Parsers.SMTLibLexer
    , Issy.Parsers.TSLMT
    , Issy.Prelude
    , Issy.Printers.LLIssyFormat
    , Issy.Printers.RPG
    , Issy.Printers.SymbolicGame
    , Issy.Printers.SMTLib
    , Issy.Products.RPGMonitor
    , Issy.Products.SGMonitor
    , Issy.Products.SymbolicGames
    , Issy.Solver.Acceleration
    , Issy.Solver.Acceleration.Base
    , Issy.Solver.Acceleration.Heuristics
    , Issy.Solver.Acceleration.LemmaFinding
    , Issy.Solver.Acceleration.LoopScenario
    , Issy.Solver.Acceleration.MDAcceleration
    , Issy.Solver.Acceleration.OuterFixPoint
    , Issy.Solver.Acceleration.PolyhedraGeometricAccel 
    , Issy.Solver.Acceleration.Strengthening
    , Issy.Solver.Acceleration.UFLAcceleration
    , Issy.Solver.Attractor
    , Issy.Solver.EnforcementSummaries
    , Issy.Solver.GameInterface
    , Issy.Solver.ObjectiveSolver
    , Issy.Solver.Synthesis
    , Issy.Specification
    , Issy.Statistics
    , Issy.Translation
    , Issy.Translation.DOA
    , Issy.Translation.LTL2DOA
    , Issy.Translation.RPG2SG
    , Issy.Translation.RPLTL2SG
    , Issy.Translation.TSL2RPG
    , Issy.Translation.TSL2RPLTL
    , Issy.Utils.Extra
    , Issy.Utils.Logging
    , Issy.Utils.OpenList
    , Issy.Utils.PrioQueue
    , Issy.Utils.Queue

  hs-source-dirs:
      src/lib

  default-language:
    Haskell2010

executable issy

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=unused-imports
    -Wwarn=unused-matches
    -Wwarn=unused-top-binds
    -Wwarn=unused-local-binds
    -Wwarn=unused-pattern-binds
    -Wwarn=type-defaults
-----optl-static

  main-is:
    Main.hs

  build-depends:
      base
    , issy

  hs-source-dirs:
    src/issy

  default-language:
    Haskell2010
