name:                issy
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts -optl-static

  build-depends:
      base
    , containers
    , process
    , hanoi
    , finite
    , tsl-parser

  exposed-modules:
      Main

  hs-source-dirs:
      src/
  
  default-language:
    Haskell2010
