cabal-version:      3.0
name:               issy
version:            3.0.0.0
build-type:         Simple

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts -optl-static

  build-depends:
      base
    , containers
    , process
    , hanoi
    , tsl-parser

  exposed-modules:
      Main

  hs-source-dirs:
      src/
  
  default-language:
    Haskell2010
